1407 - auth login and connection with firebase

--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -1,5 +1,5 @@
 body{
     background-size:1920px;
     background-position: center;
-    background-image: url('../../../public/wallpaper.png');
+    background-color: #DDDEDA;
 }
