--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 body{
     margin: 0;
     font-family:"League Spartan", sans-serif;
-    background-color:#DDDEDA;
+    background-color:#020004;
 }
